--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,19 @@ jobs:
         run: npm install
       - name: build project
         run: npm run build:prod
+        if: always()
       - name: linting typescript
-        run: npm run lint:ts     
+        run: npm run lint:ts   
+        if: always()  
       - name: unit testing
         run: npm run test:unit    
+        if: always()
       - name: unit testing
+        if: always()
         run: npm run test:unit    
       - name: build storybook
         run: npm run storybook:build
+        if: always()
       - name: build screenshot testing
+        if: always()
         run: npm run test:ui:ci
