--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.0",
+        "axios": "^0.26.1",
         "babel-eslint": "^10.1.0",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-prettier": "^5.2.3",
